Update resource links and badges in index.html

--- a/index.html
+++ b/index.html
@@ -824,8 +824,8 @@
             <section class="category">
                 <h2>🎮 Games & Interactive Learning</h2>
                 <div class="resources">
-                    <a href="attackgame.html" class="new-badge">NEW</span></h3>
-                        <h3>Attack Game</h3>
+                    <a href="attackgame.html" class="resource-card">
+                        <h3>Attack Game<span class="new-badge">NEW</span></h3>
                         <p>Cybersecurity Attack Simulator</p>
                     </a>
                     <a href="equinegame.html" class="resource-card">
@@ -884,36 +884,36 @@
             <section class="category">
                 <h2>🤖 AI & Productivity Tools</h2>
                 <div class="resources">
-                      <a href="airesistant.html" class="new-badge">NEW</span></h3>
-                        <h3>Instructor Guide to Building AI Resistant Assignments</h3>
+                      <a href="airesistant.html" class="resource-card">
+                        <h3>Instructor Guide to Building AI Resistant Assignments <span class="new-badge">NEW</span></h3>
                         <p>AI Resistant</p>
                     </a>
-                     <a href="graphics.html" class="new-badge">NEW</span></h3>
-                        <h3>Using AI to Build Instructional Graphics</h3>
+                     <a href="graphics.html" class="resource-card">
+                        <h3>Using AI to Build Instructional Graphics <span class="new-badge">NEW</span></h3>
                         <p>Graphic Arts</p>
                     </a>
                     <a href="policy.html" class="resource-card">
                         <h3>AI Classroom Policy Builder</h3>
                         <p>Policy Builder</p>
                     </a>
-                    <a href="leaders.html" class="new-badge">NEW</span></h3>
-                        <h3>Leaders in the AI Industry</h3>
+                    <a href="leaders.html" class="resource-card">
+                        <h3>Leaders in the AI Industry<span class="new-badge">NEW</span></h3>
                         <p>AI Leadership</p>
                     </a>
                     <a href="bio.html" class="resource-card">
-                        <h3>Instructor Profile</h3>
+                        <h3>Instructor Profile <span class="new-badge">NEW</span></h3>
                         <p>Instructor Profile</p>
                     </a>
-                     <a href="burst.html" class="new-badge">NEW</span></h3>
-                        <h3>Interactive Guide to AI Detection</h3>
+                     <a href="burst.html" class="resource-card">
+                        <h3>Interactive Guide to AI Detection <span class="new-badge">NEW</span></h3>
                         <p>Study Guide to Burstiness and Perplexity</p>
                     </a>
-                    <a href="better.html" class="new-badge">NEW</span></h3>
-                        <h3>Interactive AI Prompting Guide</h3>
+                    <a href="better.html" class="resource-card">
+                        <h3>Interactive AI Prompting Guide <span class="new-badge">NEW</span></h3>
                         <p>Study Guide AI Prompting</p>
                     </a>
-                    <a href="short.html" class="new-badge">NEW</span></h3>
-                        <h3>ChatGPT Short Cut Keys</h3>
+                    <a href="short.html" class="resource-card">
+                        <h3>ChatGPT Short Cut Keys <span class="new-badge">NEW</span></h3>
                         <p>Guide to ChatGPT</p>
                     </a>
                     <a href="claudenav.html" class="resource-card">
@@ -929,31 +929,31 @@
                         <p>EPNC Overview</p>
                     </a>
                     <a href="ethics.html" class="resource-card">
-                        <h3>Ethics and AI</h3>
+                        <h3>Ethics and AI <span class="new-badge">NEW</span></h3>
                         <p>Study Guide Ethics and AI</p>
                     </a>
-                    <a href="itenerary.html" class="new-badge">NEW</span></h3>
-                        <h3>Building a Trip Itenary</h3>
+                    <a href="itenerary.html" class="resource-card">
+                        <h3>Building a Trip Itenary <span class="new-badge">NEW</span></h3>
                         <p>Interactive Itenerary</p>
                     </a>
                     <a href="Perplexity.html" class="resource-card">
-                        <h3>Perplexity</h3>
+                        <h3>Perplexity <span class="new-badge">NEW</span></h3>
                         <p>Perplexity AI Guide</p>
                     </a>
                      <a href="https://sands-mvcc.github.io/AI/chatgtpstudents.html#links" class="resource-card">
-                        <h3>Student AI Resources</h3>
+                        <h3>Student AI Resources <span class="new-badge">NEW</span></h3>
                         <p>Student AI Resources</p>
                     </a>
                     <a href="types.html" class="resource-card">
-                        <h3>AI Fundamentals Interactive Study Guide</h3>
+                        <h3>AI Fundamentals Interactive Study Guide <span class="new-badge">NEW</span></h3>
                         <p>Study Guide</p>
                     </a>
                     <a href="rubric.html" class="resource-card">
-                        <h3>Rubric Generator</h3>
+                        <h3>Rubric Generator <span class="new-badge">NEW</span></h3>
                         <p>Assessment Rubrics</p>
                     </a>
-                    <a href="transform.html" class="new-badge">NEW</span></h3>
-                        <h3>Using AI to Transform Teaching and Learning</h3>
+                    <a href="transform.html" class="resource-card">
+                        <h3>Using AI to Transform Teaching and Learning <span class="new-badge">NEW</span></h3>
                         <p>Guide to AI Transformation in Education</p>
                     </a>
                     <a href="survey.html" class="resource-card">
