Update resource cards with new badges and links
Added 'NEW' badge to several resource cards and replaced the legacy RSA link with a new RSA Key Generator link.

--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                         <p>Password Security Analysis</p>
                     </a>
                     <a href="cybercerts.html" class="resource-card">
-                        <h3>Cyber Certifications</h3>
+                        <h3>Cyber Certifications<span class="new-badge">NEW</span></h3>
                         <p>Security Certifications Guide</p>
                     </a>
                     <a href="https://sands-mvcc.github.io/CMMC/roles.html" class="resource-card">
-                        <h3>Data Security Roles</h3>
+                        <h3>Data Security Roles<span class="new-badge">NEW</span></h3>
                         <p>Formal Data Security Roles</p>
                     </a>
                     <a href="diffie.html" class="resource-card">
-                        <h3>Diffie-Hellman</h3>
+                        <h3>Diffie-Hellman<span class="new-badge">NEW</span></h3>
                         <p>Key Exchange Algorithm</p>
                     </a>
                     <a href="epnc_dashboard.html" class="resource-card">
@@ -229,9 +229,9 @@
                         <h3>RSA Encryption</h3>
                         <p>RSA Algorithm</p>
                     </a>
-                    <a href="rsa-old.html" class="resource-card">
-                        <h3>RSA (Legacy)</h3>
-                        <p>Previous RSA Version</p>
+                    <a href="rsa-key-generator.html" class="resource-card">
+                        <h3>RSA Key Generator<span class="new-badge">NEW</span></h3>
+                        <p>Visually Interactive Key Generator</p>
                     </a>
                     <a href="rsacalc.html" class="resource-card">
                         <h3>RSA Calculator</h3>
