Replace SY0-701 link with CompTIA link

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <h3>RSA Calculator</h3>
                         <p>RSA Computation Tool</p>
                     </a>
-                    <a href="syo701.html" class="resource-card">
+                    <a href="comptia.html" class="resource-card">
                         <h3>Security+ SY0-701</h3>
                         <p>CompTIA Security+ Study</p>
                     </a>
