Update CompTIA resource card details

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                         <p>RSA Computation Tool</p>
                     </a>
                     <a href="comptia.html" class="resource-card">
-                        <h3>Security+ SY0-701</h3>
-                        <p>CompTIA Security+ Study</p>
+                        <h3>CompTIA Exam Generator<span class="new-badge">NEW</span></h3>
+                        <p>CompTIA Test Generator</p>
                     </a>
                 </div>
             </section>
