Add Caesar Cipher resource card and remove duplicate
Added a new resource card for the Caesar Cipher with a 'NEW' badge and removed the duplicate entry.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
                         <h3>Asymmetrical Encryption</h3>
                         <p>Public Key Cryptography</p>
                     </a>
+                    <a href="caesar.html" class="resource-card">
+                        <h3>Caesar Cipher<span class="new-badge">NEW</span></h3>
+                        <p>Classical Encryption Method</p>
+                    </a>
                     <a href="cmmc.html" class="resource-card">
                         <h3>CMMC</h3>
                         <p>Cybersecurity Maturity Model</p>
@@ -307,10 +311,6 @@
                     <a href="arpsim.html" class="resource-card">
                         <h3>ARP Simulator</h3>
                         <p>ARP Simulation Tool</p>
-                    </a>
-                    <a href="caesar.html" class="resource-card">
-                        <h3>Caesar Cipher</h3>
-                        <p>Classical Encryption Method</p>
                     </a>
                     <a href="classcsubnet.html" class="resource-card">
                         <h3>Class C Subnetting</h3>
