Add 'NEW' badge to resource headings
Added 'NEW' badge to various resource headings to highlight new content.

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                         <p>Access Control Lists</p>
                     </a>
                     <a href="aes.html" class="resource-card">
-                        <h3>AES</h3>
+                        <h3>AES<span class="new-badge">NEW</span></h3>
                         <p>Advanced Encryption Standard</p>
                     </a>
                     <a href="aithreats.html" class="resource-card">
-                        <h3>AI Threats</h3>
+                        <h3>AI Threats<span class="new-badge">NEW</span></h3>
                         <p>AI Security Threats</p>
                     </a>
                     <a href="asymmetrical.html" class="resource-card">
@@ -230,7 +230,7 @@
                         <p>Password Best Practices</p>
                     </a>
                     <a href="rsa.html" class="resource-card">
-                        <h3>RSA Encryption</h3>
+                        <h3>RSA Encryption<span class="new-badge">NEW</span></h3>
                         <p>RSA Algorithm</p>
                     </a>
                     <a href="rsa-key-generator.html" class="resource-card">
@@ -238,7 +238,7 @@
                         <p>Visually Interactive Key Generator</p>
                     </a>
                     <a href="rsacalc.html" class="resource-card">
-                        <h3>RSA Calculator</h3>
+                        <h3>RSA Calculator<span class="new-badge">NEW</span></h3>
                         <p>RSA Computation Tool</p>
                     </a>
                     <a href="comptia.html" class="resource-card">
@@ -305,7 +305,7 @@
                 <h2>🌐 Networking Protocols & Technologies</h2>
                 <div class="resources">
                     <a href="arp.html" class="resource-card">
-                        <h3>ARP</h3>
+                        <h3>ARP<span class="new-badge">NEW</span></h3>
                         <p>Address Resolution Protocol</p>
                     </a>
                     <a href="arpsim.html" class="resource-card">
@@ -313,7 +313,7 @@
                         <p>ARP Simulation Tool</p>
                     </a>
                     <a href="classcsubnet.html" class="resource-card">
-                        <h3>Class C Subnetting</h3>
+                        <h3>Class C Subnetting<span class="new-badge">NEW</span></h3>
                         <p>Class C Subnet Practice</p>
                     </a>
                     <a href="dhcp.html" class="resource-card">
@@ -325,7 +325,7 @@
                         <p>DHCP Address Pools</p>
                     </a>
                     <a href="dns.html" class="resource-card">
-                        <h3>DNS</h3>
+                        <h3>DNS<span class="new-badge">NEW</span></h3>
                         <p>Domain Name System</p>
                     </a>
                     <a href="dnslookup.html" class="resource-card">
@@ -341,11 +341,11 @@
                         <p>DHCP DORA Process</p>
                     </a>
                     <a href="ftp.html" class="resource-card">
-                        <h3>FTP</h3>
+                        <h3>FTP<span class="new-badge">NEW</span></h3>
                         <p>File Transfer Protocol</p>
                     </a>
                     <a href="http.html" class="resource-card">
-                        <h3>HTTP</h3>
+                        <h3>HTTP<span class="new-badge">NEW</span></h3>
                         <p>Hypertext Transfer Protocol</p>
                     </a>
                     <a href="https.html" class="resource-card">
@@ -353,15 +353,15 @@
                         <p>Secure HTTP</p>
                     </a>
                     <a href="icmp.html" class="resource-card">
-                        <h3>ICMP</h3>
+                        <h3>ICMP<span class="new-badge">NEW</span></h3>
                         <p>Internet Control Message</p>
                     </a>
                     <a href="imap.html" class="resource-card">
-                        <h3>IMAP</h3>
+                        <h3>IMAP<span class="new-badge">NEW</span></h3>
                         <p>Internet Message Access</p>
                     </a>
                     <a href="ip.html" class="resource-card">
-                        <h3>IP Protocol</h3>
+                        <h3>IP Protocol<span class="new-badge">NEW</span></h3>
                         <p>Internet Protocol</p>
                     </a>
                     <a href="ipv6.html" class="resource-card">
@@ -373,7 +373,7 @@
                         <p>IPv6 Address Compression</p>
                     </a>
                     <a href="ldap.html" class="resource-card">
-                        <h3>LDAP</h3>
+                        <h3>LDAP<span class="new-badge">NEW</span></h3>
                         <p>Lightweight Directory Access</p>
                     </a>
                     <a href="nat.html" class="resource-card">
@@ -566,7 +566,7 @@
                 <h2>🔢 Mathematics & Number Theory</h2>
                 <div class="resources">
                     <a href="binary.html" class="resource-card">
-                        <h3>Binary Numbers</h3>
+                        <h3>Binary Numbers<span class="new-badge">NEW</span></h3>
                         <p>Binary Number System</p>
                     </a>
                     <a href="binaryop.html" class="resource-card">
@@ -582,7 +582,7 @@
                         <p>Engineering Notation Lab</p>
                     </a>
                     <a href="factors.html" class="resource-card">
-                        <h3>Factors</h3>
+                        <h3>Factors<span class="new-badge">NEW</span></h3>
                         <p>Prime Factorization</p>
                     </a>
                     <a href="modulusmath.html" class="resource-card">
@@ -598,7 +598,7 @@
                         <p>Plotting X-Y Coordinates</p>
                     </a>
                     <a href="prime.html" class="resource-card">
-                        <h3>Prime Numbers</h3>
+                        <h3>Prime Numbers<span class="new-badge">NEW</span></h3>
                         <p>Prime Number Theory</p>
                     </a>
                     <a href="primecount.html" class="resource-card">
@@ -728,7 +728,7 @@
                         <p>Electrical Fire Safety</p>
                     </a>
                     <a href="flow-of-income.html" class="resource-card">
-                        <h3>Circular Flow of Income</h3>
+                        <h3>Circular Flow of Income<span class="new-badge">NEW</span></h3>
                         <p>Economics flow of Income</p>
                     </a>
                     <a href="gaap.html" class="resource-card">
@@ -751,7 +751,7 @@
                         <p>Shakespeare's Hamlet</p>
                     </a>
                     <a href="hamletchrono.html" class="resource-card">
-                        <h3>Hamlet Chronology</h3>
+                        <h3>Hamlet Chronology<span class="new-badge">NEW</span></h3>
                         <p>Character Relationships</p>
                     </a>
                     <a href="hamlet.png" class="resource-card">
@@ -759,11 +759,11 @@
                         <p>Hamlet Diagram</p>
                     </a>
                     <a href="nounsverbs.html" class="resource-card">
-                        <h3>Types of Nouns and Verbs</h3>
+                        <h3>Types of Nouns and Verbs<span class="new-badge">NEW</span></h3>
                         <p>Noun Verb Challenge</p>
                     </a>
                     <a href="philosopherguide.html" class="resource-card">
-                        <h3>Philosophy Guide</h3>
+                        <h3>Philosophy Guide<span class="new-badge">NEW</span></h3>
                         <p>Philosophers Reference</p>
                     </a>
                     <a href="sentencediagram.html" class="resource-card">
