Update OpenAI API Key input placeholder

--- a/comptia.html
+++ b/comptia.html
@@ -600,7 +600,7 @@
                 
                 <div class="selection-group">
                     <label for="apiKey">OpenAI API Key:</label>
-                    <input type="password" id="apiKey" placeholder="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" autocomplete="off">
+                    <input type="password" id="apiKey" placeholder="" autocomplete="off">
                     <small style="color: #6b7280; display: block; margin-top: 5px;">
                         Get your API key from <a href="https://platform.openai.com/api-keys" target="_blank" style="color: #3b82f6;">platform.openai.com</a>
                     </small>
