Update placeholder for OpenAI API Key input

--- a/comptia.html
+++ b/comptia.html
@@ -600,7 +600,7 @@
                 
                 <div class="selection-group">
                     <label for="apiKey">OpenAI API Key:</label>
-                    <input type="password" id="apiKey" placeholder="" autocomplete="off">
+                    <input type="password" id="apiKey" placeholder="sk-..." autocomplete="off">
                     <small style="color: #6b7280; display: block; margin-top: 5px;">
                         Get your API key from <a href="https://platform.openai.com/api-keys" target="_blank" style="color: #3b82f6;">platform.openai.com</a>
                     </small>
