Add 'NEW' badge to various resource headings

--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
                 <h2>🌐 Networking Protocols & Technologies</h2>
                 <div class="resources">
                     <a href="arp.html" class="resource-card">
-                        <h3>ARP<span class="new-badge">NEW</span></h3>
+                        <h3>ARP <span class="new-badge">NEW</span></h3>
                         <p>Address Resolution Protocol</p>
                     </a>
                     <a href="arpsim.html" class="resource-card">
-                        <h3>ARP Simulator</h3>
+                        <h3>ARP Simulator <span class="new-badge">NEW</span></h3>
                         <p>ARP Simulation Tool</p>
                     </a>
                     <a href="classcsubnet.html" class="resource-card">
@@ -349,7 +349,7 @@
                         <p>Hypertext Transfer Protocol</p>
                     </a>
                     <a href="https.html" class="resource-card">
-                        <h3>HTTPS</h3>
+                        <h3>HTTPS <span class="new-badge">NEW</span></h3>
                         <p>Secure HTTP</p>
                     </a>
                     <a href="icmp.html" class="resource-card">
@@ -365,7 +365,7 @@
                         <p>Internet Protocol</p>
                     </a>
                     <a href="ipv6.html" class="resource-card">
-                        <h3>IPv6</h3>
+                        <h3>IPv6 <span class="new-badge">NEW</span></h3>
                         <p>IPv6 Addressing</p>
                     </a>
                     <a href="ipv6compression.html" class="resource-card">
@@ -373,60 +373,53 @@
                         <p>IPv6 Address Compression</p>
                     </a>
                     <a href="ldap.html" class="resource-card">
-                        <h3>LDAP<span class="new-badge">NEW</span></h3>
+                        <h3>LDAP <span class="new-badge">NEW</span></h3>
                         <p>Lightweight Directory Access</p>
                     </a>
                     <a href="nat.html" class="resource-card">
-                        <h3>NAT</h3>
+                        <h3>NAT <span class="new-badge">NEW</span></h3>
                         <p>Network Address Translation</p>
                     </a>
                     <a href="ntp.html" class="resource-card">
-                        <h3>NTP</h3>
+                        <h3>NTP <span class="new-badge">NEW</span></h3>
                         <p>Network Time Protocol</p>
                     </a>
                     <a href="osi.html" class="resource-card">
-                        <h3>OSI Model</h3>
+                        <h3>OSI Model <span class="new-badge">NEW</span></h3>
                         <p>OSI Reference Model</p>
                     </a>
                     <a href="pop3.html" class="resource-card">
-                        <h3>POP3</h3>
+                        <h3>POP3 <span class="new-badge">NEW</span></h3>
                         <p>Post Office Protocol</p>
                     </a>
                     <a href="protocols.html" class="resource-card">
-                        <h3>Protocols Overview</h3>
+                        <h3>Protocols Overview <span class="new-badge">NEW</span></h3>
                         <p>Network Protocols Summary</p>
                     </a>
-                    <a href="rarp.html" class="resource-card">
-                        <h3>RARP</h3>
-                        <p>Reverse ARP</p>
-                    </a>
                     <a href="rdp.html" class="resource-card">
-                        <h3>RDP</h3>
+                        <h3>RDP <span class="new-badge">NEW</span></h3>
                         <p>Remote Desktop Protocol</p>
                     </a>
                     <a href="smtp.html" class="resource-card">
-                        <h3>SMTP</h3>
+                        <h3>SMTP <span class="new-badge">NEW</span></h3>
                         <p>Simple Mail Transfer</p>
                     </a>
                     <a href="stp.html" class="resource-card">
-                        <h3>STP</h3>
+                        <h3>STP <span class="new-badge">NEW</span></h3>
                         <p>Spanning Tree Protocol</p>
                     </a>
                     <a href="subnetcalc.html" class="resource-card">
-                        <h3>Subnet Calculator</h3>
+                        <h3>Subnet Calculator <span class="new-badge">NEW</span></h3>
                         <p>IPv4 Subnet Calculator</p>
                     </a>
                     <a href="syslog.html" class="resource-card">
-                        <h3>Syslog</h3>
+                        <h3>Syslog <span class="new-badge">NEW</span></h3>
                         <p>System Logging Protocol</p>
                     </a>
                     <a href="tcp.html" class="resource-card">
                         <h3>TCP</h3>
                         <p>Transmission Control Protocol</p>
                     </a>
-                    <a href="udp.html" class="resource-card">
-                        <h3>UDP</h3>
-                        <p>User Datagram Protocol</p>
                     </a>
                 </div>
             </section>
