--- a/index.html
+++ b/index.html
@@ -535,6 +535,10 @@
                         <h3>Op-Amp Basics</h3>
                         <p>Operational Amplifiers</p>
                     </a>
+                    <a href="opamplab.html" class="resource-card">
+                        <h3>Op-Amp Lab Exercise<span class="new-badge">NEW</span></h3>
+                        <p>Comparitive Analysis of Operational Amplifiers</p>
+                    </a>
                     <a href="pid.html" class="resource-card">
                         <h3>PID Controller</h3>
                         <p>PID Control Theory</p>
