--- a/persona.html
+++ b/persona.html
@@ -546,7 +546,7 @@
     <div class="section-label">Core Concept</div>
     <h2>One Teacher.<br>A Whole Department.</h2>
     <p>Workforce multiplication is a strategy in which a single knowledge worker—using AI personas—effectively performs the coordinated work of multiple specialists simultaneously. For teachers, this means drafting, designing, assessing, and editing course materials in the time it used to take to do just one of those tasks.</p>
-    <img src="personas.jpeg" alt="Detailed description of user personas" width="600">
+    <img src="personas.png" alt="Detailed description of user personas" width="600">
 
     <div class="stat-bar">
       <div class="stat">
